--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
   box-shadow: 2px 2px 2px lightgrey;
   cursor: pointer;
   font-size: 1.2em;
-  background: green;
+  background: blue;
 }
 
 #button:focus {
